--- a/test-position-it-right/position.html
+++ b/test-position-it-right/position.html
@@ -60,5 +60,25 @@
       voluptatum dolore aliquid amet quisquam autem, aspernatur natus distinctio
       neque maxime excepturi ut.
     </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+      dolorum vel rerum eligendi at, obcaecati placeat debitis dolor fuga,
+      molestias porro consectetur quaerat quibusdam veniam dolores. Illum,
+      numquam? Fugit provident accusantium adipisci atque blanditiis asperiores
+      incidunt et error eligendi dolorum neque eos distinctio quisquam
+      architecto facilis quaerat sequi quod autem temporibus eum at, maxime
+      earum! Esse odio, mollitia dignissimos cupiditate asperiores nobis
+      voluptatum dolore aliquid amet quisquam autem, aspernatur natus distinctio
+      neque maxime excepturi ut.
+    </p>
+    <footer>
+      <ul>
+        <li>Hello</li>
+        <li>There</li>
+        <li>This is a test</li>
+      </ul>
+      <a href="#">This is anchor text</a>
+      <a href="#">This is also anchor text</a>
+    </footer>
   </body>
 </html>
